# XInputEdge

./: .clang-format  .gitignore  README.md  evaluation_report.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
xinputedge-receiver/: CMakeLists.txt  README.md
xinputedge-receiver/examples/basic_receiver/: CMakeLists.txt  main.c
xinputedge-receiver/examples/cli_robot_sim/: CMakeLists.txt  main.c
xinputedge-receiver/include/: xie_server.h
xinputedge-receiver/include/xinputedge/: export.h  server.h  xinputedge.h
xinputedge-receiver/protocol/: xie_protocol.h
xinputedge-receiver/src/: packet.c  packet.h  ring_buffer.c  ring_buffer.h  server.c  time_util.c  time_util.h  udp.c  udp.h
xinputedge-receiver/tests/: CMakeLists.txt  test_boundary_gtest.cpp  test_io.c  test_packet.c  test_ring_buffer.c  test_time_util.c
xinputedge-sender/: README.md  XieClient.cs  xinputedge-sender.csproj
xinputedge-sender/examples/BasicSender/: BasicSender.csproj  Program.cs
xinputedge-sender/protocol/: XieProtocol.cs
